--- a/index.html
+++ b/index.html
@@ -390,17 +390,109 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="form-text">Подпишитесь на рассылку</p>
+          <div class="form-container">
+            <input
+              type="email"
+              class="footer-form-mail"
+              placeholder="E-mail"
+              name="mail"
+              required
+            />
+            <button class="button footer-sign-btn">
+              Подписаться
+              <svg class="btn-send-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
     <!-- ===============================BACKDROP============================= -->
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" is-hidden data-modal>
       <div class="modal">
         <button class="button-modal" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
             <use href="./images/icons.svg#close-icon"></use>
           </svg>
         </button>
+        <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Имя</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user_name"
+                required
+                pattern="[a-zA-Zа-яА-Я]+"
+                minlength="2"
+                class="modal-form-input"
+              />
+              <svg class="modal-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Телефон</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="phone"
+                name="user_phone"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                class="modal-form-input"
+              />
+              <svg class="modal-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#phone-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Почта</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="email"
+                name="user_mail"
+                required
+                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+                class="modal-form-input"
+              />
+              <svg class="modal-form-input-icon" width="18" height="18">
+                <use href="./images/icons.svg#email-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Комментарий</span>
+            <textarea
+              name="user_coments"
+              placeholder="Введите текст"
+              class="modal-form-coments"
+            ></textarea>
+          </label>
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user_policy"
+            class="modal-form-check visually-hidden"
+          />
+          <label for="user-policy" class="modal-form-check-desc"
+            ><span class="modal-form-fake-checkbox">
+              <svg class="modal-form-checkbox-icon" width="16" height="15">
+                <use href="./images/icons.svg#icon-check"></use>
+              </svg>
+            </span>
+            Соглашаюсь с рассылкой и принимаю
+            <a class="modal-form-check-link link" href="">&nbspУсловия договора</a></label
+          >
+          <button class="button modal-form-button" type="submit">Отправить</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
