--- a/portfolio.html
+++ b/portfolio.html
@@ -341,6 +341,24 @@
             </li>
           </ul>
         </div>
+        <form class="footer-form">
+          <p class="form-text">Подпишитесь на рассылку</p>
+          <div class="form-container">
+            <input
+              type="email"
+              class="footer-form-mail"
+              placeholder="E-mail"
+              name="mail"
+              required
+            />
+            <button class="button footer-sign-btn">
+              Подписаться
+              <svg class="btn-send-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
