--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     </footer>
 
     <!-- ===============================BACKDROP============================= -->
-    <div class="backdrop" is-hidden data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button-modal" data-modal-close>
           <svg class="modal-close-icon" width="18" height="18">
