--- a/index.html
+++ b/index.html
@@ -390,9 +390,9 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
+        <div class="form-container">
           <p class="form-text">Подпишитесь на рассылку</p>
-          <div class="form-container">
+          <form class="footer-form">
             <input
               type="email"
               class="footer-form-mail"
@@ -400,14 +400,14 @@
               name="mail"
               required
             />
-            <button class="button footer-sign-btn">
+            <button type="submit" class="button footer-sign-btn">
               Подписаться
               <svg class="btn-send-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -468,7 +468,7 @@
               </svg>
             </span>
           </label>
-          <label class="modal-form-field">
+          <label class="modal-form-field-textarea">
             <span class="modal-form-input-desc">Комментарий</span>
             <textarea
               name="user_coments"
@@ -480,6 +480,7 @@
             id="user-policy"
             type="checkbox"
             name="user_policy"
+            required
             class="modal-form-check visually-hidden"
           />
           <label for="user-policy" class="modal-form-check-desc"
