--- a/portfolio.html
+++ b/portfolio.html
@@ -341,9 +341,9 @@
             </li>
           </ul>
         </div>
-        <form class="footer-form">
+        <div class="form-container">
           <p class="form-text">Подпишитесь на рассылку</p>
-          <div class="form-container">
+          <form class="footer-form">
             <input
               type="email"
               class="footer-form-mail"
@@ -351,14 +351,14 @@
               name="mail"
               required
             />
-            <button class="button footer-sign-btn">
+            <button type="submit" class="button footer-sign-btn">
               Подписаться
               <svg class="btn-send-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-send"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
